--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App {
   font-family: "Source Sans Pro", sans-serif;
+  color: #536770;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.App a {
+  text-decoration: none;
+  color: #5f9ea0;
+}
+
+.App footer {
+  font-size: 13px;
 }
