--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,19 +1,19 @@
 .Weather {
   border: 1px solid #5f9ea0;
   border-radius: 4px;
-  padding: 30px 20px 20px;
+  padding: 30px 0px 20px;
   margin: 20px 0 5px 0;
 }
 
 .Weather h1 {
   font-family: "Poppins", sans-serif;
   font-size: 30px;
-  padding: 20px 0 0;
+  padding: 20px 20px 0;
   color: #5f9ea0;
 }
 
-.Weather hr {
-  color: #5f9ea0;
+.Weather form {
+  padding-left: 20px;
 }
 
 .Weather .submit-btn {
@@ -22,21 +22,36 @@
 }
 
 .Weather .current-date {
+  padding-left: 20px;
   font-size: 20px;
 }
 
-.current-weather-icon {
+.Weather .current-weather-icon {
+  padding-left: 30px;
   font-size: 70px;
 }
 
 .Weather .current-temp {
-  font-size: 40px;
+  font-size: 45px;
   font-weight: 600;
   margin-top: 20px;
 }
 
+.Weather .unit {
+  top: -15px;
+  position: relative;
+  font-size: 18px;
+}
+
 .Weather .current-weather-description {
-  font-size: 40px;
-  font-weight: 500;
-  margin-top: 20px;
+  font-size: 30px;
+  font-weight: 400;
+  margin-top: 30px;
+}
+
+.Weather .weather-details {
+  margin: 0 auto;
+  padding: 6px 0;
+  color: #fff;
+  background: #5f9ea0;
 }
