--- a/src/Weather.css
+++ b/src/Weather.css
@@ -27,14 +27,13 @@
 }
 
 .Weather .current-weather-icon {
-  padding-left: 30px;
-  font-size: 70px;
+  padding-left: 20px;
+  width: 80px;
 }
 
 .Weather .current-temp {
-  font-size: 45px;
+  font-size: 40px;
   font-weight: 600;
-  margin-top: 20px;
 }
 
 .Weather .unit {
@@ -46,11 +45,11 @@
 .Weather .current-weather-description {
   font-size: 30px;
   font-weight: 400;
-  margin-top: 30px;
+  margin-top: 13px;
 }
 
 .Weather .weather-details {
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 6px 0;
   color: #fff;
   background: #5f9ea0;
