--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -8,6 +8,10 @@ span {
   font-size: 18px;
 }
 
+.weather-forecast {
+  margin-right: 10px;
+}
+
 .weather-forecast-day {
   font-size: 16px;
   font-weight: 600;
