--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,8 +1,8 @@
 .Weather {
   border: 1px solid #5f9ea0;
   border-radius: 4px;
-  padding: 30px 0px 20px;
-  margin: 20px 0 5px 0;
+  padding: 25px 0 15px 0;
+  margin: 20px 0 7px 0;
 }
 
 .Weather h1 {
@@ -13,44 +13,10 @@
 }
 
 .Weather form {
-  padding-left: 30px;
+  padding-left: 25px;
 }
 
 .Weather .submit-btn {
-  color: #fff;
-  background: #5f9ea0;
-}
-
-.Weather .current-date {
-  padding: 0 0 10px 30px;
-  font-size: 20px;
-}
-
-.Weather .current-weather-icon {
-  padding-left: 30px;
-  margin-top: 5px;
-}
-
-.Weather .current-temp {
-  font-size: 40px;
-  font-weight: 600;
-}
-
-.Weather .unit {
-  top: -15px;
-  position: relative;
-  font-size: 18px;
-}
-
-.Weather .current-weather-description {
-  font-size: 30px;
-  font-weight: 400;
-  margin-top: 13px;
-}
-
-.Weather .weather-details {
-  margin: 20px auto;
-  padding: 6px 0;
   color: #fff;
   background: #5f9ea0;
 }
